Remove horizontal scroll and fix flexbox in 'Mi estilo'

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 h1 { 
@@ -12,6 +14,7 @@ h1 {
     margin: -10px;  
     font-weight: 900;
     color: rgba(255, 244, 244, 0.927);
+    overflow: none;
 }
 
 h2 {
@@ -131,7 +134,7 @@ main {
 
 .block-1 {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     border: 4px solid brown;
     margin-right: 300px;
     justify-content: space-between;
